decline or accept an invite
