# app/Http/Controllers/Controller.php
@@ -1004,6 +1004,61 @@ use Illuminate\Routing\Controller as BaseController;
         * ),
                 *),
 
+        * @OA\Post(
+        * path="/api/v1/user/group/handle/invite",
+        * operationId="UserHandleInviteToGroup",
+        * tags={"P2P group Operations"},
+        * summary="User P2P group Invite handling to whether accept or decline the invite",
+        * description="User P2P group Invite handling to whether accept or decline the invite",
+        *     @OA\RequestBody(
+        *         @OA\JsonContent(),
+        *         @OA\MediaType(
+        *            mediaType="multipart/form-data",
+        *            @OA\Schema(
+        *               type="object",
+        *               required={"invitation_uuid", "response"},
+        *               @OA\Property(property="invitation_uuid", type="string",example="22a7ecb8-..."),
+        *               @OA\Property(property="response", type="text",example="accepted/declined"),
+        *            ),
+        *        ),
+        *    ),
+        *      @OA\Response(
+        *          response=201,
+        *          description="Group invitation accepting or declining Successfully done",
+        *          @OA\JsonContent(
+        *              @OA\Property(property="status",type="string", example="success"),
+        *              @OA\Property(property="group",type="string", example="Great, you successfully changed the status of your invite"),
+        *           ),
+        *       ),
+        *      @OA\Response(
+        *          response=400,
+        *          description="Error during the processing of the request=>Bad request",
+                    @OA\JsonContent(
+        *              @OA\Property(property="status",type="string", example="failed"),
+        *              @OA\Property(property="message",type="string", example="Sorry, login encountered a problem. please try again later"),
+        *           ),
+        *       ),
+        *      @OA\Response(
+        *          response=422,
+        *          description="Unprocessable Entity",
+                    @OA\JsonContent(
+        *              @OA\Property(property="status",type="string", example="failed"),
+        *              @OA\Property(property="message",type="string", example="request payload error"),
+        *           ),
+        *       ),
+        *       @OA\Response(
+        *          response=404,
+        *          description="User not found",
+                    @OA\JsonContent(
+        *              @OA\Property(property="status",type="string", example="failed"),
+        *              @OA\Property(property="message",type="string", example="User not found"),
+        *           ),
+        *       ),
+        *      @OA\Response(response=500, description="Internal server error"),
+        * ),
+                *),
+
+
         * @OA\Get(
         * path="/api/v1/user/group/active/all",
         * operationId="ExtractActiveP2PGroupProjects",
